--- a/doc/css/index.css
+++ b/doc/css/index.css
@@ -1,3 +1,5 @@
+/* board */
+
 .board{
   background-color: #D2E7E7;
   padding : 2rem;
@@ -43,4 +45,83 @@
   align-items: center;
 
   color : #4c6499;
+}
+
+/* introduce */
+
+.introduce-content-left, .introduce-content-right{
+  padding : 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.introduce-content-img_area{
+  width : 29.5rem;
+  height: 20.9rem;
+}
+
+.introduce-content-img_area-img{
+  width: 100%;
+  height: 100%;
+
+  background-image: url('https://upload.wikimedia.org/wikipedia/en/4/43/Digimon_Digital_Monsters_Season_1_DVD_Cover.png');
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+
+.introduce-content-textarea{
+  width: 19.3rem;
+  height: 16.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  gap : 1rem;
+
+  margin-left: 5.2rem;
+}
+
+.introduce-content-right .introduce-content-textarea{
+  margin-left: 0;
+  margin-right: 5.2rem;
+}
+
+.introduce-content-textarea-button{
+  margin: 0.5rem 0;
+}
+
+.introduce-content-textarea-title{
+  display: flex;
+  align-items: center;
+}
+
+.introduce-content-textarea-content{
+  display: flex;
+  align-items: center;
+}
+
+.introduce-content-textarea-title-text{
+  font-size: 3.5rem;
+  font-weight: 900;
+}
+
+.introduce-content-textarea-content-text{
+  line-height: 2.5rem;
+}
+
+.introduce-content-textarea-button{
+  width: 9.2rem;
+  height: 2.5rem;
+}
+
+.introduce-content-textarea-button button{
+  width: 100%;
+  height: 2.5rem;
+  background-color: #7cb2d2;
+  color: #4c6499;
+  font-size: 1.2rem;
+
+  border: none;
+  border-radius: 10px;
 }
