--- a/doc/css/index.css
+++ b/doc/css/index.css
@@ -54,6 +54,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  background-color: #D2E7E7;
 }
 
 .introduce-content-img_area{
@@ -67,7 +69,7 @@
 
   background-image: url('https://upload.wikimedia.org/wikipedia/en/4/43/Digimon_Digital_Monsters_Season_1_DVD_Cover.png');
   background-repeat: no-repeat;
-  background-size: 100% 100%;
+  background-size: cover;
 }
 
 .introduce-content-textarea{
