--- a/doc/css/board.css
+++ b/doc/css/board.css
@@ -119,10 +119,18 @@ form button{
 }
 
 .utility-button{
+  border: none;
+  border-radius: 10px;
+
+  background-color : #4C6499;
+
   width : 9.25rem;
   height: 100%;
 }
 
+.utility-button:hover{
+  cursor: pointer;
+}
 .utility-board_list_num-ul{
   display: flex;
   justify-content: center;
